--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id "com.google.dagger.hilt.android"
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
-apply plugin: 'kotlin-kapt'
 
 android {
     namespace 'com.example.learnarchitecture'
@@ -12,11 +12,14 @@ android {
     defaultConfig {
         applicationId "com.example.learnarchitecture"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -43,47 +46,53 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "$composeCompilerVersion"
+        kotlinCompilerExtensionVersion "1.1.1"
     }
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.10'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "androidx.compose.ui:ui:$compose_ui_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
+    implementation "androidx.compose.material:material:$compose_ui_version"
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
-    implementation "androidx.room:room-runtime:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
+    // material icon
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
 
-    // Architecture Components
-    implementation "androidx.room:room-runtime:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
-    implementation "androidx.room:room-ktx:$roomVersion"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
+    // Hilt dependencies
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
-    // Hilt
-    implementation "com.google.dagger:hilt-android:$hiltVersion"
-    implementation "androidx.hilt:hilt-navigation-compose:$hiltAndroidXVersion"
-    kapt "com.google.dagger:hilt-compiler:$hiltVersion"
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
-    // Jetpack Compose
-    implementation "androidx.activity:activity-compose:$activityComposeVersion"
-    implementation "androidx.compose.compiler:compiler:$composeCompilerVersion"
-    implementation "androidx.compose.material:material:$composeVersion"
-    implementation "androidx.compose.animation:animation:$composeVersion"
-    implementation "androidx.compose.ui:ui-tooling-preview:$composeVersion"
-    implementation "androidx.navigation:navigation-compose:$navigationVersion"
-    implementation "androidx.lifecycle:lifecycle-runtime-compose:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$archLifecycleVersion"
-    implementation "com.google.accompanist:accompanist-appcompat-theme:$accompanistVersion"
-    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanistVersion"
-    debugImplementation "androidx.compose.ui:ui-tooling:$composeVersion"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$composeVersion"
+    // multidex
+    implementation "androidx.multidex:multidex:2.0.1"
+
+    // splash screen
+    implementation "androidx.core:core-splashscreen:1.0.0"
+
+    // compose navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+
+    implementation "com.google.accompanist:accompanist-pager:0.27.1"
+
+    //live data for compose
+    implementation 'androidx.compose.runtime:runtime-livedata:1.4.0-alpha02'
+
+    //room
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.room:room-ktx:2.4.3"
 }
 
 // Allow references to generated code
